input padding overflow error fixed

--- a/src/styles/base/typography.scss
+++ b/src/styles/base/typography.scss
@@ -7,7 +7,7 @@ button {
 }
 
 h1 {
-  font-family: NetflixRegular, Arial, Helvetica, sans-serif;
+  font-family: NetflixBold, Arial, Helvetica, sans-serif;
   color: #fff;
   font-size: 1.7rem;
   line-height: 1.1;
@@ -17,7 +17,7 @@ h1 {
 }
 
 h2 {
-  font-family: NetflixLight, Arial, Helvetica, sans-serif;
+  font-family: NetflixMedium, Arial, Helvetica, sans-serif;
   color: #fff;
   font-size: 1.25rem;
   line-height: 1.1;
@@ -34,6 +34,11 @@ p {
   text-align: center;
   letter-spacing: 0.5px;
   font-weight: 500;
+}
+
+input,
+span {
+  font-family: NetflixRegular, Arial, Helvetica, sans-serif;
 }
 
 @media (min-width: 760px) {
