--- a/src/styles/components/input.scss
+++ b/src/styles/components/input.scss
@@ -10,7 +10,7 @@
     top: 0;
     left: 0;
     width: 100%;
-    padding: 1.25rem;
+    padding: 1rem 0 1rem 1rem;
     height: 100%;
     background-color: transparent;
 
@@ -31,6 +31,7 @@
     display: inline-block;
     transition: 0.3s;
     pointer-events: none;
+    font-size: 1.3rem;
   }
 
   small {
@@ -64,6 +65,14 @@
 }
 
 // media queries
+
+@media (min-width: $media-tablet-md) {
+  #input {
+    input {
+      padding: 1rem 0 1rem 2rem;
+    }
+  }
+}
 
 @media (min-width: $media-tablet-lg) {
   #input {
