--- a/src/styles/pages/welcome.scss
+++ b/src/styles/pages/welcome.scss
@@ -7,6 +7,13 @@
       rgba(2, 0, 36, 0.5) 88%
     );
   background-blend-mode: color;
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  min-height: 100vh;
+  height: 100%;
+  width: 100%;
+  position: relative;
 
   .introduction {
     position: absolute;
@@ -15,8 +22,10 @@
     left: 50%;
     width: min(95%, 860px);
 
-    h2 {
-      padding: 1rem 0;
+    p {
+      & :first-child {
+        padding: 1rem 0;
+      }
     }
 
     .form-container {
